compiler-core/src/go/tests/snapshots/gleam_core__go__tests__results__aliased_error.snap
---
source: compiler-core/src/go/tests/results.rs
expression: "import gleam.{Error as Thing}\npub fn main() { Thing(1) }"
snapshot_kind: text
---
----- SOURCE CODE
import gleam.{Error as Thing}
pub fn main() { Thing(1) }

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main[K gleam_P.Type[K]]() gleam_P.Result_t[K, gleam_P.Int_t] {
  return gleam_P.Error_c[K, gleam_P.Int_t]{1}
}
