compiler-core/src/go/tests/snapshots/gleam_core__go__tests__results__error.snap
---
source: compiler-core/src/go/tests/results.rs
expression: "pub fn main() { Error(1) }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { Error(1) }

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main[K gleam_P.Type[K]]() gleam_P.Result_t[K, gleam_P.Int_t] {
  return gleam_P.Error_c[K, gleam_P.Int_t]{1}
}
